--- a/Index/style.css
+++ b/Index/style.css
@@ -3,28 +3,34 @@
     padding: 0;
 }
 .heading{
+    
     background-color: rgb(46, 46, 46);
     height: 95px;
     padding-top: 25px;
-    padding-bottom: 15px;
-    padding-left: 525px;
-    justify-content: center;
-    align-items: center;
+    padding-bottom: 10px;
 }
 .heading h2{
     font-size: 40px;
     color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    justify-content: center;
+    border: 2px solid rgb(46, 46, 46);
+    max-width: 100%;
+    margin: auto;
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 .heading p{
-    padding-left: 20px;
+    padding-bottom: 10px;
     color: aliceblue;
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: center;
+    border: 2px solid rgb(46, 46, 46);
+    max-width: 100%;
+    margin: auto;
+    display: flex;
     align-items: center;
+    justify-content: center;
 }
 .header{
     position: sticky;
